--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -6,9 +6,9 @@
 #ENTRYPOINT ["java","-jar","/app.jar"]*/
 #copy target/dockerized
 
-FROM maven:3.8.2-jdk-11 AS build
-COPY . .
-RUN mvn clean package -DskipTests
+#FROM maven:3.8.2-jdk-11 AS build
+#COPY . .
+#RUN mvn clean package -DskipTests
 
 #
 # Package stage
