--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -8,7 +8,7 @@
 
 FROM maven:3.8.2-jdk-11 AS build
 COPY . .
-RUN mvn clean package -DskipTests
+RUN mvn clean package --DskipTests
 
 #
 # Package stage
