--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -8,7 +8,7 @@
 
 FROM maven:3.8.2-jdk-11 AS build
 COPY . .
-RUN mvn -f /home/app/pom.xml clean package
+RUN mvn -f .pom.xml clean package
 
 #
 # Package stage
