--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -4,7 +4,7 @@ RUN apt-get update
 RUN apt-get install openjdk-11-jdk -y
 COPY . .
 
-RUN ./gradlew bootJar --no-daemon
+RUN ./pom.xml bootJar --no-daemon
 
 FROM openjdk:11-jdk-slim
 
