--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,15 +1,5 @@
-FROM ubuntu:latest AS build
-
-RUN apt-get update
-RUN apt-get install openjdk-11-jdk -y
-COPY . .
-
-RUN ./pom.xml bootJar --no-daemon
-
-FROM openjdk:11-jdk-slim
-
+FROM eclipse-temurin:11-jdk
+ARG JAR_FILE=target/clon-1.0.1-SNAPSHOT.jar
+COPY ${JAR_FILE} app.jar
 EXPOSE 8080
-
-COPY --from=build /target/clon-1.0.1-SNAPSHOT.jar app.jar
-
-ENTRYPOINT ["java", "-jar", "app.jar"]
+ENTRYPOINT ["java", "-jar", "/app.jar"]
