--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -3,6 +3,6 @@ COPY . .
 RUN mvn clean package -DskipTests
 
 FROM openjdk:11
-COPY --from=build backend/target/clon-1.0.1-SNAPSHOT.jar clon.jar
+COPY --from=build target/clon-1.0.1-SNAPSHOT.jar clon.jar
 EXPOSE 8080
 ENTRYPOINT ["java", "-jar", "clon.jar"]
