--- a/.gitignore
+++ b/.gitignore
@@ -15,8 +15,8 @@ dist-ssr
 # Editor directories and files
 .front/vscode/*
 !.front/vscode/extensions.json
-.front/idea
-.front/DS_Store
+front/.idea
+front/.DS_Store
 *.suo
 *.ntvs*
 *.njsproj
